@@ -20,7 +20,7 @@ GetOptions(
 ) or pod2usage();
 
 my $bouncer = App::Bondage->new( Debug => $debug, Work_dir => $work_dir );
-POE::Component::Daemon->spawn( detach => 1 ) unless $debug;
+POE::Component::Daemon->spawn( detach => 1, logfile => '/dev/null' ) unless $debug;
 $poe_kernel->run();
 
 sub encrypt_pass {
